# Focus

./: BUILD.md  LICENSE  README.md  index.html  release.sh
css/: styles.css
js/: app.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
