[package]
name = "focus"
version = "1.2.0"
description = "A beautiful, dependency-free Pomodoro timer with tasks, streaks and analytics."
authors = ["Aowshad Himel"]
license = "MIT"
edition = "2021"

[lib]
name = "focus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
png = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
